@@ -874,3 +874,4 @@ o Both aliases 'rift' and 'cast rift' can work -Savil
 o Added a 'generic' area in which you can add mobs that you want to bash in every area (wyrms, pumpkins...) -Savil
 o Updated bashing areas -Nemi
 o Updated shadoweaver aliases -Aidan
+o Added a tether summon alias 'teths' -Gianna
